--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@
 
         <section class="page" id="contact">
             <h1>Contact</h1>
-            <p>Use https://formsubmit.co/ for serverless implementation of form</p>
+            <form action="https://formsubmit.co/jactj@hotmail.co.uk" method="POST">
+                <input type="hidden" name="_captcha" value="true" />
+                <input type="text" name="name" placeholder="Your Name" required />
+                <input type="email" name="email" placeholder="Your Email" required />
+                <textarea name="content" rows="4" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </section>
     </div>
 
