--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         </ul>
     </nav>
 
+    <div class="nav-dots">
+        <a href="#about" class="nav-dot active" data-section="about"></a>
+        <a href="#skills" class="nav-dot" data-section="skills"></a>
+        <a href="#experience" class="nav-dot" data-section="experience"></a>
+        <a href="#projects" class="nav-dot" data-section="projects"></a>
+        <a href="#contact" class="nav-dot" data-section="contact"></a>
+    </div>
+
     <button class="nav-button top-button" id="scrollUp">
         <svg viewBox="0 0 24 24" width="24" height="24">
             <path fill="currentColor" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
