--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
 <body>
     <nav class="navigation">
         <ul>
-            <li><a href="#about" class="nav-link">About</a></li>
-            <li><a href="#skills" class="nav-link">Skills</a></li>
-            <li><a href="#experience" class="nav-link">Experience</a></li>
-            <li><a href="#projects" class="nav-link">Projects</a></li>
-            <li><a href="#contact" class="nav-link">Contact</a></li>
             <li><a href="https://github.com/JacTJones" target="_blank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/jac-jones/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
         </ul>
     </nav>
 
     <div class="nav-dots">
-        <a href="#about" class="nav-dot active" data-section="about"></a>
-        <a href="#skills" class="nav-dot" data-section="skills"></a>
-        <a href="#experience" class="nav-dot" data-section="experience"></a>
-        <a href="#projects" class="nav-dot" data-section="projects"></a>
-        <a href="#contact" class="nav-dot" data-section="contact"></a>
+        <a href="#about" class="nav-dot active" data-section="about">
+            <span class="dot-label">About</span>
+        </a>
+        <a href="#skills" class="nav-dot" data-section="skills">
+            <span class="dot-label">Skills</span>
+        </a>
+        <a href="#experience" class="nav-dot" data-section="experience">
+            <span class="dot-label">Experience</span>
+        </a>
+        <a href="#projects" class="nav-dot" data-section="projects">
+            <span class="dot-label">Projects</span>
+        </a>
+        <a href="#contact" class="nav-dot" data-section="contact">
+            <span class="dot-label">Contact</span>
+        </a>
     </div>
 
     <button class="nav-button top-button" id="scrollUp">
@@ -167,7 +172,6 @@
                         </div>
                     </div>
                 </div>
-                
             </div>
         </section>
 
