--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <nav class="mobile-nav">
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="social-links">
+            <a href="https://github.com/JacTJones" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/jac-jones/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        </div>
+    </nav>
+
     <nav class="navigation">
         <ul>
             <li><a href="https://github.com/JacTJones" target="_blank"><i class="fab fa-github"></i></a></li>
