--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="burger-menu">
-        <span></span>
-        <span></span>
-        <span></span>
+        <i class="fa-solid fa-bars"></i>
     </div>
 
     <nav class="mobile-nav">
