Fix form and remove testing project cards

--- a/index.html
+++ b/index.html
@@ -190,227 +190,12 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>Personal Protfolio</h3>
-                        <div class="project-description">
-                            <p>This website! A simple single page web site for my portfolio.</p>
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-
-
-
             </div>
         </section>
 
         <section class="page" id="contact">
             <h1>Contact</h1>
-            <form action="https://formsubmit.co/jactj@hotmail.co.uk" method="POST">
+            <form action="https://formspree.io/f/mjkrgllw" method="POST">
                 <input type="hidden" name="_captcha" value="true" />
                 <input type="text" name="name" placeholder="Your Name" required />
                 <input type="email" name="email" placeholder="Your Email" required />
