Add custom email to form

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 
         <section class="page" id="contact">
             <h1>Contact</h1>
+            <p>Fill in the form below, or send me an email at <a class="highlighted" href="mailto:me@jacjones.dev">me@jacjones.dev</a>.</p>
             <form action="https://formspree.io/f/mjkrgllw" method="POST">
                 <input type="hidden" name="_captcha" value="true" />
                 <input type="text" name="name" placeholder="Your Name" required />
