Add chess website to projects

--- a/index.html
+++ b/index.html
@@ -186,7 +186,27 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/JacTJones/portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a>
+                            <!-- <a href="#" ><i class="fas fa-external-link-alt"></i> Link</a> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>Chess</h3>
+                        <div class="project-description">
+                            <p>A web application where two players can play chess against each other.</p>
+                        </div>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Node.JS</span>
+                            <span class="tech-tag">Vue.JS</span>
+                            <span class="tech-tag">Bootstrap</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/JacTJones/chess" target="_blank"><i class="fab fa-github"></i> Code</a>
                         </div>
                     </div>
                 </div>
